--- a/style.css
+++ b/style.css
@@ -433,6 +433,7 @@ a {
     background-image: url(images/1.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 300px;
     width: 500px;
   }
