--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ html {
   scroll-behavior: smooth;
 }
 @import url("https://fonts.googleapis.com/css2?family=Martian+Mono:wght@700&display=swap");
-body {
-}
 
 .navbar {
   display: flex;
@@ -451,7 +449,7 @@ a {
     height: 400px;
     width: 275px;
     border: solid 0px black;
-    font-family: inherit;
+    font-family: Georgia, serif;
   }
 
   .bannertext {
@@ -465,6 +463,6 @@ a {
     /* 15px font size for mobile devices */
     font-size: 19px;
     text-align: center;
-    font-family: inherit;
+    font-family: Georgia, serif;
   }
 }
