--- a/style.css
+++ b/style.css
@@ -427,6 +427,9 @@ a {
   opacity: 1;
 }
 @media only screen and (max-width: 767px) {
+  * {
+    font-family: Georgia, serif;
+  }
   .project1-photo {
     background-image: url(images/1.png);
     background-repeat: no-repeat;
